corrected overlapping

--- a/just4you/style.css
+++ b/just4you/style.css
@@ -5,12 +5,9 @@ body {
     margin-top: 0px;
     margin-bottom: 0px;
     margin-right: 0px;
-    margin-left: 0px;
+    margin-left: 100px;
     padding: 0px;
-    overflow: hidden;
-    position: ;
-    top: 50%;
-    left: 50%;
+    overflow: ;
     }
 
 a:link {
@@ -38,6 +35,7 @@ a:visited {
   margin: 0;
   padding: 0;
   text-align: center;
+  z-index:100;
 
 }
 
@@ -62,8 +60,8 @@ nav {
   top: 0%;
   width: 100%;
   position: fixed;
-  background-color: #007bce;
-  opacity: 0.6;
+  background-color: rgb(0, 123, 206, 0.6);
+  opacity: ;
 }
 
 .container {
@@ -101,19 +99,118 @@ font-size: 20px;
 .item {
   width: 75%;
   padding: 50px;
-  height: 280px;
+  height:80vh;
   text-align: center;
   background-color: #ecf0f1;
-  border-bottom: 1px solid #ccc;
+  border-bottom: ;
   
 }
 
 .first {
-  margin-top: ;
+  margin-top: 200px;
 }
 .default {
-  margin-top: ;
+  margin-top: 200px;
 }
 .col-full {
   width: ;
+}
+
+/* Styling the area of the slides */
+#slideshow {
+  overflow: hidden;
+  height: 510px;
+  width: 728px;
+  margin: 0 auto;
+}
+ 
+/* Style each of the sides 
+with a fixed width and height */
+.slide {
+  float: left;
+  height: 510px;
+  width: 728px;
+}
+
+.slide img {
+    height: 510px;
+    width: 728px;
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+}
+
+.slide img:hover {
+    filter: none;
+    -webkit-filter: grayscale(0);
+}
+ 
+/* Add animation to the slides */
+.slide-wrapper {
+   
+/* Calculate the total width on the
+  basis of number of slides */
+  width: calc(728px * 6);
+ 
+/* Specify the animation with the
+  duration and speed */
+  animation: slide 20s ease infinite;
+}
+ 
+/* Define the animation 
+for the slideshow */
+@keyframes slide {
+   
+/* Calculate the margin-left for 
+  each of the slides */
+  20% {
+    margin-left: 0px;
+  }
+ 
+  40% {
+    margin-left: calc(-728px * 1);
+  }
+ 
+  60% {
+    margin-left: calc(-728px * 2);
+  }
+ 
+  80% {
+    margin-left: calc(-728px * 3);
+  }
+
+    100% {
+    margin-left: calc(-728px * 4);
+  }
+
+    120% {
+    margin-left: calc(-728px * 5);
+  }
+
+    140% {
+    margin-left: calc(-728px * 6);
+  }
+}
+
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  margin-left: 200px;
+}
+
+header,
+footer {
+  flex: none;
+  background: #;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+main {
+  overflow-y: scroll;
+  flex: auto;
 }
